@@ -1,6 +1,9 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/bittornado/bittornado-0.3.18-r2.ebuild,v 1.2 2008/01/17 14:17:37 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/bittornado/bittornado-0.3.18-r2.ebuild,v 1.3 2011/03/28 20:31:43 arfrever Exp $
+
+EAPI="3"
+PYTHON_DEPEND="2"
 
 inherit distutils eutils
 
@@ -17,7 +20,6 @@ KEYWORDS="~x86-freebsd ~amd64-linux ~x86-linux ~x86-solaris"
 IUSE="gtk"
 
 RDEPEND="gtk? ( =dev-python/wxpython-2.6* )
-	>=dev-lang/python-2.1
 	dev-python/pycrypto"
 DEPEND="${RDEPEND}
 	app-arch/unzip
@@ -26,14 +28,18 @@ DEPEND="${RDEPEND}
 S="${WORKDIR}/${MY_PN}-CVS"
 PIXMAPLOC="/usr/share/pixmaps/bittornado"
 
-src_unpack() {
-	unpack ${A}
-	cd "${S}"
+pkg_setup() {
+	python_set_active_version 2
+	python_pkg_setup
+}
 
+src_prepare() {
 	# fixes wrong icons path
 	sed -i "s:os.path.abspath(os.path.dirname(os.path.realpath(sys.argv\[0\]))):\"${PIXMAPLOC}/\":" btdownloadgui.py
 	# Needs wxpython-2.6 only, bug #201247
 	epatch "${FILESDIR}"/${P}-wxversion.patch
+
+	python_convert_shebangs -r 2 .
 }
 
 src_install() {
